# Self-driving-car

./: CMakeLists.txt  README.md  opencv.py  package.xml  setup.py  test.txt
OpenCV/: 1.txt  models.txt  segment_video.py  semantic_segmentation.py
OpenCV/road_Seg/: config_ENET.json  config_UNET.json  environment-cpu.yml  environment.yml  run_seg.py  segment_video.py  split_data.py  test.py  train.py
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/camera_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/gazebo_world_description/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/imu_description/: .catkin  setup.sh
catkin_ws/devel/.private/prius_description/: .catkin  setup.sh
catkin_ws/devel/.private/prius_msgs/: .catkin  local_setup.sh
catkin_ws/devel/.private/rj_training/: .catkin
catkin_ws/devel/.private/self_driving_car/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/vehicle_model/: .catkin  setup.sh
catkin_ws/devel/.private/vehicle_sim_interface/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/vehicle_sim_launcher/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/velodyne_description/: .catkin  local_setup.sh
catkin_ws/devel/.private/velodyne_gazebo_plugins/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/velodyne_simulator/: .catkin
catkin_ws/devel/include/prius_msgs/: Control.h
catkin_ws/devel/include/rj_training/: StringWithHeader.h
catkin_ws/devel/lib/pkgconfig/: camera_description.pc  catkin_tools_prebuild.pc  gazebo_world_description.pc  imu_description.pc  prius_description.pc  prius_msgs.pc  rj_training.pc  self_driving_car.pc  vehicle_model.pc  vehicle_sim_interface.pc  vehicle_sim_launcher.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc
catkin_ws/devel/lib/rj_training/: listener_node  talker_node
catkin_ws/devel/lib/vehicle_sim_interface/: vehicle_info_publisher  vehicle_input_subscriber
catkin_ws/devel/share/camera_description/cmake/: camera_descriptionConfig-version.cmake  camera_descriptionConfig.cmake
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/devel/share/gazebo_world_description/cmake/: gazebo_world_descriptionConfig-version.cmake  gazebo_world_descriptionConfig.cmake
catkin_ws/devel/share/imu_description/cmake/: imu_descriptionConfig-version.cmake  imu_descriptionConfig.cmake
catkin_ws/devel/share/prius_description/cmake/: prius_descriptionConfig-version.cmake  prius_descriptionConfig.cmake
catkin_ws/devel/share/prius_msgs/cmake/: prius_msgs-msg-extras.cmake  prius_msgs-msg-paths.cmake  prius_msgsConfig-version.cmake  prius_msgsConfig.cmake
catkin_ws/devel/share/rj_training/cmake/: rj_training-msg-extras.cmake  rj_training-msg-paths.cmake  rj_trainingConfig-version.cmake  rj_trainingConfig.cmake
catkin_ws/devel/share/self_driving_car/cmake/: self_driving_carConfig-version.cmake  self_driving_carConfig.cmake
catkin_ws/devel/share/vehicle_model/cmake/: vehicle_modelConfig-version.cmake  vehicle_modelConfig.cmake
catkin_ws/devel/share/vehicle_sim_interface/cmake/: vehicle_sim_interfaceConfig-version.cmake  vehicle_sim_interfaceConfig.cmake
catkin_ws/devel/share/vehicle_sim_launcher/cmake/: vehicle_sim_launcherConfig-version.cmake  vehicle_sim_launcherConfig.cmake
catkin_ws/devel/share/velodyne_description/cmake/: velodyne_descriptionConfig-version.cmake  velodyne_descriptionConfig.cmake
catkin_ws/devel/share/velodyne_gazebo_plugins/cmake/: velodyne_gazebo_pluginsConfig-version.cmake  velodyne_gazebo_pluginsConfig.cmake
catkin_ws/logs/rj_training/: build.check.006.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr
catkin_ws/logs/velodyne_gazebo_plugins/: build.make.001.log.stderr
catkin_ws/src/Computer-Vision-Tutorial/: CMakeLists.txt
catkin_ws/src/Computer-Vision-Tutorial/src/: motor_controller.cpp  planner.py
catkin_ws/src/Computer-Vision-Tutorial/world/: course.material  course.world
catkin_ws/src/rj_training/: CMakeLists.txt  package.xml
catkin_ws/src/rj_training/config/: talker.yaml
catkin_ws/src/rj_training/launch/: conversation.launch
catkin_ws/src/rj_training/src/: listener.cpp  talker.cpp
catkin_ws/src/self-driving-car/: CMakeLists.txt  package.xml
catkin_ws/src/self-driving-car/launch/: test.launch  world_test.launch
catkin_ws/src/self-driving-car/src/: data.py
catkin_ws/src/self-driving-car/urdf/: body.xacro  vehicle.xacro  wheel.xacro
catkin_ws/src/self-driving-car/worlds/: course.material  course.world
catkin_ws/src/self_driving_car/: CMakeLists.txt  package.xml
catkin_ws/src/self_driving_car/launch/: self_driving_car.launch
catkin_ws/src/self_driving_car/worlds/: self_driving_car.world  test.world
config/: calibration.yaml
launch/: gazebo9_citysim_autoware.launch  test.launch  world_test.launch
model/gostraightsign/: model.config  model.sdf
model/leftsign/: model.config  model.sdf
model/rightsign/: model.config  model.sdf
model/sign_0_0/: model.config  model.sdf
model/stopsign/: model.config  model.sdf
scripts/: README.md  readme.md
scripts/materials/: go_straight.material  map.material  stop.material  turn_left.material
src/: auto_control.py  auto_control_command.py  control.py  data.py  lane.py  lane_detector.py  traffic_sign_detector.py
urdf/: HDL32.xacro  body.xacro  imu.xacro  monocular_camera.xacro  steering.gazebo  steering.xacro  vehicle.gazebo  vehicle.xacro  wheel.gazebo  wheel.xacro
worlds/: README.md  final.world  map.world  mapa.world  mapp.world  my_world.world  oldmap.world  oldworld.world  worldconfig.world
worlds/scripts/: go_straight.material  turn_right.material
(+72 files in other folders)
