<?xml version="1.0"?>
<package format="2">
  <name>self-driving-car</name>
  <version>0.0.0</version>
  <description>The self-driving-car package</description>

  <maintainer email="nqt@todo.todo">nqt</maintainer>

	<license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
	<build_depend>urdf_tutorial</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_controller</build_depend>
	<build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
	<build_depend>gazebo_ros_control</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_depend>effort_controllers</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>urdf_tutorial</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
	<build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>position_controllers</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>velocity_controllers</build_export_depend>
  <build_export_depend>effort_controllers</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
	<exec_depend>urdf_tutorial</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
	<exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <export>
  	<gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
